# MTCheck

./: CMakeLists.txt  LICENSE  README.md
cmake/: deduplicatorConfig.cmake.in
docs/: Doxyfile
include/: basic_approach.hpp  data_generation.hpp  dedup.hpp  dedup_approaches.hpp  dedup_merkle_tree.hpp  deduplicator.hpp  deduplicator_interface.hpp  full_approach.hpp  gpu_sha1.hpp  hash_functions.hpp  kokkos_hash_list.hpp  kokkos_md5.hpp  kokkos_merkle_tree.hpp  kokkos_murmur3.hpp  kokkos_queue.hpp  kokkos_vector.hpp  kokkos_wyhash.hpp  list_approach.hpp  map_helpers.hpp  merkle_tree.hpp  reference_impl.hpp  restart_approaches.hpp  restart_merkle_tree.hpp  tree_approach.hpp  update_pattern_analysis.hpp  utils.hpp  write_merkle_tree_chkpt.hpp
merkle_trees/: CMakeLists.txt  gpu_hash_lists.cu  gpu_hash_lists.cuh  gpu_main.cu  gpu_merkle_tree.cu  gpu_merkle_tree.cuh  gpu_merkle_tree.hpp  gpu_sha1.hpp  hash_table.cuh  merkle_tree.hpp  merkle_tree.py
scripts/: example_build_script.sh  example_jobscript_lsf.sh  jobscript.sh
src/: basic_approach.cpp  cpu_dedup.cpp  cpu_test.cpp  data_generation.cpp  dedup.cpp  dedup.cu  dedup_files.cpp  dedup_files_mpi.cpp  full_approach.cpp  full_chkpt.cpp  gpu_dedup.cu  gpu_test.cu  hash_functions.cpp  list_approach.cpp  list_chkpt.cpp  main.cpp  main.cu  merkle_tree.cpp  naive_chkpt.cpp  restart_chkpt_files.cpp  test_case_1.cpp  test_case_2.cpp  test_case_3.cpp  test_case_4.cpp  test_case_5.cpp  test_case_6.cpp  test_case_7.cpp  test_case_8.cpp  test_case_9.cpp  test_dedup.cpp  test_dedup_files.cpp  test_restart.cpp  tree_approach.cpp  tree_low_root_approach.cpp  utils.cpp
test/: CMakeLists.txt  basic_chkpt.cpp  full_chkpt.cpp  list_chkpt.cpp  test_case_01.cpp  test_case_02.cpp  test_case_03.cpp  test_case_04.cpp  test_case_05.cpp  test_case_06.cpp  test_case_07.cpp  test_case_08.cpp  test_case_09.cpp  test_case_10.cpp  tree_chkpt.cpp
